# Givefi-Dapp

./: .gitignore  ADMIN_SETUP_GUIDE.md  CHROME_BROWSER_SUPPORT.md  DAO_IMPLEMENTATION_SUMMARY.md  DAO_USER_GUIDE.md  DEPLOYMENT_GUIDE.md  DEV_SETUP.md  Index.html  LICENSE  PRODUCTION_CHECKLIST.md  README.md  SECURITY_AUDIT_CHECKLIST.md  admin.html  index-backup.html  index-new.html  index.html  netlify.toml  package-lock.json  setup-admin.sh  setup-dev-environment.sh  test-browser-compatibility.js  test-dao.js  test-features.html  verify-deployment.js
deploy/: README.md  admin.html  index.html  netlify.toml
frontend/: package-lock.json  package.json  server.js
frontend/pages/: admin.html  create-raffle.html  create.html  index.html
frontend/utils/: config.js  contract.js  wallet.js
givefi-contract/givefi-frontend/: Dockerfile
givefi-contracts/: Anchor.toml  package-lock.json  package.json
givefi-contracts/tests/: basic.ts  givefi-contracts.ts
scripts/: check-and-initialize.js  deploy.sh  generate-idl-template.js  package.json  test-deployment.js  update-config.js
smart-contracts/: Anchor.toml  docker-compose.yml  package-lock.json  package.json
smart-contracts/givefi-backend/: package-lock.json  (+2 more)
smart-contracts/programs/givefi-contract/: Cargo.toml
smart-contracts/programs/givefi-contract/src/: anchor.ts  lib.rs  main.jsx  main.tsx
smart-contracts/programs/givefi-contract/src/components/: CreateRaffleForm.jsx
smart-contracts/programs/givefi-contract/src/hooks/: useAnchorProvider.js
tests/: local-test-suite.js  run-tests.sh
utils/: contract.js
(+12 files in other folders)
