[package]
name = "givefi-contract"
version = "0.1.0"
description = "GiveFi - Transparent Decentralized Giveaway Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "givefi_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = "0.30.0"